--- a/contact.html
+++ b/contact.html
@@ -74,7 +74,7 @@
             </tr>
             <tr>
               <td>
-                <form action="#" method="post">
+                <form>
                   <table>
                     <tr>
                       <td>Name:</td>
@@ -113,9 +113,9 @@
                     <tr>
                       <td><textarea name="message" rows="6" cols="42" required></textarea></td>
                     </tr>
-                    <tr>
-                      <td><input type="submit" value="Send Message" /></td>
-                    </tr>
+                    <td>
+                      <button type="submit">Send Message</button>
+                    </td>                     
                   </table>
                 </form>
               </td>
@@ -170,14 +170,6 @@
           </td>
       </tr>
   </table>
-
-    <h3>Contact Us on WhatsApp</h3>
-    <a href="https://web.whatsapp.com/" target="_blank">
-      <button>📲 Chat on WhatsApp</button>
-    </a>
-
-    <h3>Live Chat Support</h3>
-    <a href="mailto:support@example.com">📩 Send us a message</a>
 
     <h2>Follow Me on Social Media</h2>
     <a href="https://www.facebook.com/" target="_blank">
