--- a/about.html
+++ b/about.html
@@ -6,6 +6,8 @@
     <title>About Us - Yummy Ice Cream Parlour</title>
   </head>
   <body>
+
+    <!-- Header -->
     <header>
       <table>
         <tr>
@@ -34,6 +36,8 @@
     </header>
 
     <main>
+
+      <!-- About Section -->
       <section>
         <table width="100%" height="500">
           <tr>
@@ -72,6 +76,7 @@
         </table>
       </section>
 
+      <!-- Welcome to Yummy Ice Cream Parlour -->
       <section>
         <table>
           <tr>
@@ -106,6 +111,7 @@
         </table>
       </section>
 
+      <!-- Gallery -->
       <section>
         <h2>Gallery</h2>
         <table>
@@ -157,9 +163,9 @@
           </tr>
         </table>
       </section>
-
     </main>
 
+    <!-- Footer -->
     <footer>
       <hr />
       <p>
