--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,8 @@
     <title>Contact Us</title>
   </head>
   <body>
+
+    <!-- Header -->
     <header>
       <table>
         <tr>
@@ -125,6 +127,7 @@
       </tr>
     </table>
 
+    <!-- Icons -->
     <table>
       <tr>
         <td>
@@ -148,7 +151,7 @@
       </tr>
     </table>
 
-
+    <!-- Visit Our Store Now -->
     <table>
       <tr>
           <td>
@@ -171,6 +174,7 @@
       </tr>
   </table>
 
+  <!--  Social Media Links -->
     <h2>Follow Me on Social Media</h2>
     <a href="https://www.facebook.com/" target="_blank">
       <img src="./images/facebook.png" alt="Facebook" width="40" height="40" />
@@ -181,6 +185,8 @@
     <a href="https://www.linkedin.com/feed/" target="_blank">
       <img src="./images/linkedin.png" alt="LinkedIn" width="40" height="40" />
     </a>
+
+    <!-- Footer -->
     <footer>
       <hr />
       <p>&copy; 2025 Yummy Ice Cream Parlour. Sweet moments, one scoop at a time! 🍦❤️</p>
