--- a/menu.html
+++ b/menu.html
@@ -6,6 +6,8 @@
     <title>Delicious Ice Cream Menu</title>
 </head>
 <body>
+
+  <!-- Header -->
   <header>
     <table>
       <tr>
@@ -34,6 +36,8 @@
   </header>
     
     <main>
+
+      <!-- Find Your Perfect Pint -->
         <section>
             <h1>Find Your Perfect Pint!</h1>
             <div>
@@ -56,7 +60,8 @@
                     </select>
                 </label>
             </div>
-            
+
+            <!--  Ice Cream Selection -->
             <section>
                 <h1>Our Ice Cream Selection</h1>
                 <table>
@@ -133,6 +138,7 @@
                 </table>
               </section>
 
+              <!-- Indulge in Sweet Frozen Delights -->
               <section>
                 <h1>Indulge in Sweet Frozen Delights</h1>
                 <table>
@@ -158,6 +164,7 @@
               </section>
     </main>
 
+    <!-- Footer -->
     <footer>
       <hr />
       <p>&copy; 2025 Yummy Ice Cream Parlour. Sweet moments, one scoop at a time! 🍦❤️</p>
