--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Ice Cream World</title>
   </head>
   <body>
+    <!-- Header -->
       <header>
         <table>
           <tr>
@@ -34,6 +35,7 @@
 
 
     <main>
+      <!-- Hero Section -->
       <table>
         <tr>
           <td>
@@ -60,6 +62,7 @@
         </tr>
       </table>
 
+      <!-- Our Tasty Ice Cream Collection -->
       <section>
         <h1>Our Tasty Ice Cream Collection</h1>
         <table>
@@ -118,7 +121,7 @@
         </table>
       </section>
 
-      
+      <!-- Pastries in addition to ice cream -->
       <section>
         <table width="100%">
           <tr>
@@ -162,6 +165,7 @@
       </table>
       </section>
 
+      <!-- Videos Section -->
       <section>
         <h2>
             🍦 Exploring the World of Ice Cream: Flavors, Making & Desserts!
@@ -190,6 +194,7 @@
         </table>
     </section>
 
+    <!-- Featured Stores -->
     <section>
       <h2>Featured Stores</h2>
       <p>Exclusive picks for you!</p>
@@ -247,7 +252,8 @@
         </tr>
       </table>
     </section>
-      
+
+    <!-- Happy Clients Say -->
         <section>
           <h2>Happy Clients Say</h2>
           <table>
@@ -272,9 +278,10 @@
         </section>
     </main>
 
+    <!-- Footer -->
     <footer>
       <hr />
       <p>  &copy; 2025 Yummy Ice Cream Parlour. Sweet moments, one scoop at a time! 🍦❤️</p>
     </footer>
   </body>
-</html>
+</html> 
