--- a/index.html
+++ b/index.html
@@ -276,6 +276,31 @@
             </tr>
           </table>
         </section>
+
+         <!-- Indulge in Sweet Frozen Delights -->
+         <section>
+          <h1>Indulge in Sweet Frozen Delights</h1>
+          <table>
+            <tr>
+              <td><img src="./images/gallery-1.jpg" alt="Ice Cream 1" width="200"></td>
+              <td><img src="./images/gallery-2.jpg" alt="Ice Cream 2"  width="200"></td>
+              <td><img src="./images/gallery-3.jpg" alt="Ice Cream 3"  width="200"></td>
+              <td><img src="./images/gallery-4.jpg" alt="Ice Cream 4"  width="200"></td>
+              <td><img src="./images/gallery-5.jpg" alt="Ice Cream 5"  width="200"></td>
+              <td><img src="./images/gallery-6.jpg" alt="Ice Cream 6"  width="200"></td>
+              <td><img src="./images/ice 5.PNG" alt="Ice Cream 6"  width="200"></td>
+            </tr>
+            <tr>
+              <td><img src="./images/gallery-7.jpg" alt="Ice Cream 7"  width="200"></td>
+              <td><img src="./images/gallery-8.jpg" alt="Ice Cream 8"  width="200"></td>
+              <td><img src="./images/gallery-9.jpg" alt="Ice Cream 9"  width="200"></td>
+              <td><img src="./images/gallery-10.jpg" alt="Ice Cream 10"  width="200"></td>
+              <td><img src="./images/gallery-11.jpg" alt="Ice Cream 11"  width="200"></td>
+              <td><img src="./images/gallery-12.jpg" alt="Ice Cream 12"  width="200"></td>
+              <td><img src="./images/ice1.PNG" alt="Ice Cream 6"  width="200"></td>
+            </tr>
+          </table>
+        </section>
     </main>
 
     <!-- Footer -->
